# workwolf

./: .gitignore  .wolfie_history  README.md  main.py  pyproject.toml
cli/: wolfie.py
cli/wolfie/: __init__.py
cli/wolfie/app/: app.py
cli/wolfie/client/: stream.py
cli/wolfie/core/: config.py
cli/wolfie/runtime/: daemon.py  node.py
cli/wolfie/ui/: runtime_messages.py  shell.py
daemon/: main.py
daemon/browser/: playwright_runner.py
daemon/middlewares/: request_context.py
daemon/router/: agent_browser_command.py  api.py
llm_orchestration_langgraph/functions/: agent_browser_vercel.py
