[project]
name = "wolfie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "httpx>=0.28.1",
    "playwright>=1.58.0",
    "prompt-toolkit>=3.0.52",
    "rich>=14.3.3",
    "typer>=0.24.1",
    "uvicorn>=0.41.0",
]

[tool.setuptools.packages.find]
include = ["cli*", "daemon*"]
namespaces = true

[project.scripts]
wolfie = "cli.wolfie:app"